More alignment fixes

--- a/src/styles/components/permissions.scss
+++ b/src/styles/components/permissions.scss
@@ -16,5 +16,7 @@
   .token {
     font-weight: 100;
     word-break: break-all;
+    font-size: 90%;
+    text-transform: uppercase;
   }
 }
